--- a/.github/workflows/macos-intel.yaml
+++ b/.github/workflows/macos-intel.yaml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v26
+    - uses: DeterminateSystems/nix-installer-action@main
     - name: Run install.sh
       run: |
         sudo mv /etc/shells /etc/shells.bak
