--- a/packages.toml
+++ b/packages.toml
@@ -223,7 +223,7 @@ common = [{ name = "vim", method = "nix", function = "setup_vim" }]
 [emacs-basic]
 type = "basic"
 common = [
-  # { name = "emacs", method = "nix-hm", function = "setup_emacs" },
+  { name = "emacs", method = "nix-hm", function = "setup_emacs" },
   { name = "hunspell", method = "nix" },
   { name = "hunspellDicts.en_US", method = "nix" },
   { name = "enchant", method = "nix-hm" },
