--- a/packages.toml
+++ b/packages.toml
@@ -8,10 +8,6 @@ common = [{ name = "xdg_config", method = "script", function = "setup_xdg_config
 type = "basic"
 common = [{ name = "nix", method = "script", function = "setup_nix" }]
 
-[attic-client]
-type = "basic"
-common = [{ name = "attic-client", method = "nix-hm" }]
-
 [direnv]
 type = "basic"
 common = [{ name = "direnv", method = "nix-hm" }]
@@ -102,7 +98,7 @@ common = [
 type = "basic"
 common = [
   { name = "git", method = "nix-hm", function = "setup_git" },
-  # { name = "git-secrets", method = "nix-hm", function = "setup_git-secrets" },
+  { name = "git-secrets", method = "nix-hm", function = "setup_git-secrets" },
 ]
 
 [sheldon]
