--- a/packages.toml
+++ b/packages.toml
@@ -161,7 +161,7 @@ common = [{ name = "taplo", method = "nix-hm" }]
 type = "basic"
 common = [
   { name = "docker", method = "script", function = "setup_docker" },
-  { name = "oxker", method = "nix-hm", },
+  { name = "oxker", method = "nix-hm" },
 ]
 
 ## security
