--- a/packages.toml
+++ b/packages.toml
@@ -525,9 +525,9 @@ darwin = [
   { name = "koekeishiya/formulae/yabai", method = "brew", function = "setup_yabai" },
   { name = "koekeishiya/formulae/skhd", method = "brew", function = "setup_skhd" },
   { name = "FelixKratz/formulae/sketchybar", method = "brew", function = "setup_sketchybar" },
-  { name = "font-hack-nerd-font", method = "cask" },
-  { name = "font-cica", method = "cask" },
-  { name = "font-plemol-jp-nf", method = "cask" },
+  # { name = "font-hack-nerd-font", method = "cask" },
+  # { name = "font-cica", method = "cask" },
+  # { name = "font-plemol-jp-nf", method = "cask" },
   { name = "aquaskk", method = "cask", function = "setup_aquaskk" },
 ]
 
