--- a/packages.toml
+++ b/packages.toml
@@ -295,14 +295,18 @@ ubuntu = [
   { name = "zlib1g-dev", method = "apt" },
   { name = "uuid-dev", method = "apt" },
 ]
+darwin = [
+  { name = "openssl", method = "brew" },
+  { name = "readline", method = "brew" },
+  { name = "sqlite3", method = "brew" },
+  { name = "xz", method = "brew" },
+  { name = "zlib", method = "brew" },
+  { name = "tcl-tk", method = "brew" },
+]
 
 [uv]
 type = "dev"
 common = [{ name = "uv", method = "nix-hm" }]
-
-[poetry]
-type = "dev"
-common = [{ name = "poetry", method = "nix-hm", function = "setup_poetry" }]
 
 ## nodejs
 [nodejs]
