--- a/files/waybar/config
+++ b/files/waybar/config
@@ -2,10 +2,25 @@
     "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)
     "spacing": 0, // Gaps between modules (4px)
-    "modules-left": ["sway/workspaces", "sway/mode"],
-    "modules-center": ["sway/window"],
-    "modules-right": ["custom/vpn", "custom/pacman", "cpu", "memory", "pulseaudio", "backlight", "battery", "clock", "tray", "idle_inhibitor"],
+    "modules-left": ["hyprland/workspaces", "hyprland/submap"],
+    "modules-center": ["hyprland/window"],
+    "modules-right": ["custom/vpn", "cpu", "memory", "pulseaudio", "backlight", "battery", "clock", "tray", "idle_inhibitor"],
     // Modules configuration
+    "hyprland/workspaces": {
+        "all-outputs": false,
+        "format": "{name} {icon}",
+        "format-icons": {
+            "1: main": "",
+            "9: sub": "",
+            "2: slack": "",
+            "3: disco": "",
+            "8: game": "",
+            "10: media": "",
+            "urgent": "",
+            "focused": "",
+            "default": ""
+        }
+    },
     "sway/workspaces": {
         "disable-scroll": true,
         "all-outputs": false,
@@ -33,7 +48,7 @@
         }
     },
     "tray": {
-        "icon-size": 24,
+        "icon-size": 22,
         "spacing": 2
     },
     "clock": {
@@ -43,15 +58,15 @@
         "format-alt": "{:%Y-%m-%d(%a) %H:%M}"
     },
     "cpu": {
-        "format": " {usage}% LA:{load}",
+        "format": "  {usage}% LA:{load}",
         "tooltip": false
     },
     "memory": {
-        "format": " {used:0.1f}G/{total:0.1f}G({percentage}%)"
+        "format": "  {used:0.1f}G/{total:0.1f}G({percentage}%)"
     },
     "backlight": {
         // "device": "acpi_video1",
-        "format": "{icon} {percent}%",
+        "format": "{icon}  {percent}%",
         "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
     "battery": {
@@ -73,20 +88,20 @@
         // "scroll-step": 1, // %, can be a float
         "format": "{icon} {volume}% {format_source}",
         "format-bluetooth": "  {icon} {volume}% {format_source}",
-        "format-bluetooth-muted": "    {format_source}",
-        "format-muted": " {format_source}",
+        "format-bluetooth-muted": "  󰝟  {format_source}",
+        "format-muted": "󰝟  {format_source}",
         "format-source": " {volume}%",
-        "format-source-muted": "",
+        "format-source-muted": " ",
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
+            "headphone": " ",
+            "hands-free": " ",
+            "headset": " ",
+            "phone": " ",
+            "portable": " ",
+            "car": " ",
+            "default": [" ", " ", " "]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pwvucontrol"
     },
     "custom/vpn": {
         "format": " {}",
