--- a/files/mako/config
+++ b/files/mako/config
@@ -11,7 +11,7 @@ max-icon-size=64
 default-timeout=5000
 ignore-timeout=1
 padding=14
-font=Cica 18
+font=plemoljp-nf 18
 margin=20
 
 [urgency=low]
