--- a/packages.toml
+++ b/packages.toml
@@ -459,6 +459,7 @@ nixos = [
   { name = "hyprland", method = "nix" },
   { name = "hyprland", method = "nix-hm" },
   { name = "xdg-desktop-portal-hyprland", method = "nix" },
+  { name = "xremap", method = "nix"},
   { name = "waybar", method = "nix", function = "setup_waybar" },
   { name = "mako", method = "nix", function = "setup_mako" },
   { name = "networkmanagerapplet", method = "nix"},
@@ -471,66 +472,66 @@ nixos = [
   { name = "seahorse", method = "nix-hm"},
 ]
 
-[sway] # arch linux
-type = "gui"
-arch = [
-  { name = "sway", method = "pacman", function = "setup_sway" },
-  { name = "xorg-xwayland", method = "pacman" },
-  { name = "qt5-wayland", method = "pacman" },
-  { name = "qt6-wayland", method = "pacman" },
-  { name = "swayidle", method = "pacman" },
-  { name = "swaylock", method = "pacman", function = "setup_swaylock" },
-  { name = "swaybg", method = "pacman" },
-  { name = "xdg-desktop-portal-wlr", method = "pacman" },
-  { name = "xdg-desktop-portal", method = "pacman" },
-  { name = "waybar", method = "pacman", function = "setup_waybar" },
-  { name = "wl-clipboard", method = "pacman" },
-  { name = "mako", method = "pacman", function = "setup_mako" },
-  { name = "lightdm", method = "pacman" },
-  { name = "lightdm-gtk-greeter", method = "pacman" },
-  { name = "network-manager-applet", method = "pacman" },
-  { name = "papirus-icon-theme", method = "pacman" },
-  { name = "bluez", method = "pacman" },
-  { name = "bluez-utils", method = "pacman" },
-  { name = "blueman", method = "pacman" },
-  { name = "pipewire", method = "pacman" },
-  { name = "wireplumber", method = "pacman" },
-  { name = "pipewire-alsa", method = "pacman" },
-  { name = "pipewire-pulse", method = "pacman" },
-  { name = "pavucontrol", method = "pacman" },
-  { name = "playerctl", method = "pacman" },
-  { name = "thunar", method = "pacman" },
-  { name = "tumbler", method = "pacman" },
-  { name = "gvfs", method = "pacman" },
-  { name = "gvfs-smb", method = "pacman" },
-  { name = "sshfs", method = "pacman" },
-  { name = "ristretto", method = "pacman" },
-  { name = "slurp", method = "pacman" },
-  { name = "grim", method = "pacman" },
-  { name = "kanshi", method = "pacman", function = "setup_kanshi" },
-  { name = "qtkeychain-qt5", method = "pacman" },
-  { name = "libsecret", method = "pacman" },
-  { name = "gnome-keyring", method = "pacman" },
-  { name = "seahorse", method = "pacman" },
-  { name = "gtk2", method = "pacman" },
-  { name = "autotiling-rs", method = "pacman" },
-  { name = "python-i3ipc", method = "pacman" }, # for inactive-windows-transparency.py
-  { name = "noto-fonts", method = "pacman", function = "setup_noto_font" },
-  { name = "noto-fonts-cjk", method = "pacman" },
-  { name = "noto-fonts-emoji", method = "pacman" },
-  { name = "noto-fonts-extra", method = "pacman" },
-  { name = "ttf-font-awesome", method = "pacman" },
-  { name = "acpi", method = "pacman" },
-  { name = "fcitx5", method = "pacman" },
-  { name = "fcitx5-configtool", method = "pacman" },
-  { name = "fcitx5-gtk", method = "pacman" },
-  { name = "fcitx5-qt", method = "pacman" },
-  { name = "fcitx5-skk", method = "pacman" },
-  { name = "clipman", method = "aur" },
-  { name = "nwg-look", method = "aur" },
-  { name = "nordic-theme", method = "aur" },
-  { name = "xwindow", method = "script", function = "setup_xwindow" },
-]
+# [sway] # arch linux
+# type = "gui"
+# arch = [
+#   { name = "sway", method = "pacman", function = "setup_sway" },
+#   { name = "xorg-xwayland", method = "pacman" },
+#   { name = "qt5-wayland", method = "pacman" },
+#   { name = "qt6-wayland", method = "pacman" },
+#   { name = "swayidle", method = "pacman" },
+#   { name = "swaylock", method = "pacman", function = "setup_swaylock" },
+#   { name = "swaybg", method = "pacman" },
+#   { name = "xdg-desktop-portal-wlr", method = "pacman" },
+#   { name = "xdg-desktop-portal", method = "pacman" },
+#   { name = "waybar", method = "pacman", function = "setup_waybar" },
+#   { name = "wl-clipboard", method = "pacman" },
+#   { name = "mako", method = "pacman", function = "setup_mako" },
+#   { name = "lightdm", method = "pacman" },
+#   { name = "lightdm-gtk-greeter", method = "pacman" },
+#   { name = "network-manager-applet", method = "pacman" },
+#   { name = "papirus-icon-theme", method = "pacman" },
+#   { name = "bluez", method = "pacman" },
+#   { name = "bluez-utils", method = "pacman" },
+#   { name = "blueman", method = "pacman" },
+#   { name = "pipewire", method = "pacman" },
+#   { name = "wireplumber", method = "pacman" },
+#   { name = "pipewire-alsa", method = "pacman" },
+#   { name = "pipewire-pulse", method = "pacman" },
+#   { name = "pavucontrol", method = "pacman" },
+#   { name = "playerctl", method = "pacman" },
+#   { name = "thunar", method = "pacman" },
+#   { name = "tumbler", method = "pacman" },
+#   { name = "gvfs", method = "pacman" },
+#   { name = "gvfs-smb", method = "pacman" },
+#   { name = "sshfs", method = "pacman" },
+#   { name = "ristretto", method = "pacman" },
+#   { name = "slurp", method = "pacman" },
+#   { name = "grim", method = "pacman" },
+#   { name = "kanshi", method = "pacman", function = "setup_kanshi" },
+#   { name = "qtkeychain-qt5", method = "pacman" },
+#   { name = "libsecret", method = "pacman" },
+#   { name = "gnome-keyring", method = "pacman" },
+#   { name = "seahorse", method = "pacman" },
+#   { name = "gtk2", method = "pacman" },
+#   { name = "autotiling-rs", method = "pacman" },
+#   { name = "python-i3ipc", method = "pacman" }, # for inactive-windows-transparency.py
+#   { name = "noto-fonts", method = "pacman", function = "setup_noto_font" },
+#   { name = "noto-fonts-cjk", method = "pacman" },
+#   { name = "noto-fonts-emoji", method = "pacman" },
+#   { name = "noto-fonts-extra", method = "pacman" },
+#   { name = "ttf-font-awesome", method = "pacman" },
+#   { name = "acpi", method = "pacman" },
+#   { name = "fcitx5", method = "pacman" },
+#   { name = "fcitx5-configtool", method = "pacman" },
+#   { name = "fcitx5-gtk", method = "pacman" },
+#   { name = "fcitx5-qt", method = "pacman" },
+#   { name = "fcitx5-skk", method = "pacman" },
+#   { name = "clipman", method = "aur" },
+#   { name = "nwg-look", method = "aur" },
+#   { name = "nordic-theme", method = "aur" },
+#   { name = "xwindow", method = "script", function = "setup_xwindow" },
+# ]
 
 [yabai]
 type = "gui"
